--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,22 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: "com.github.hierynomus.license"
+apply plugin: 'com.github.hierynomus.license'
+apply plugin: "io.spring.dependency-management"
 apply plugin: 'org.sonarqube'
 apply plugin: 'maven-publish'
-apply plugin: "com.jfrog.artifactory"
+apply plugin: 'com.jfrog.artifactory'
+apply plugin: 'signing'
+apply plugin: 'maven'
 //apply plugin: 'nebula.lint'
 
 sourceCompatibility = 1.8
 version = "${version}"
 group = 'com.dell.isg.smi'
-targetCompatibility = 1.8
 
 sourceSets {
     main {
         java {
             srcDir 'src/main/gen-src'
-           // srcDir 'src/main/ext-src'
         }
     }
 }
@@ -29,7 +30,7 @@ buildscript {
 	}
   }
   dependencies {
- 	classpath "io.spring.gradle:dependency-management-plugin:1.0.2.RELEASE"
+    classpath "io.spring.gradle:dependency-management-plugin:1.0.2.RELEASE"
     classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.4.15"
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1"
     classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.13.1"
@@ -43,8 +44,8 @@ buildscript {
 
 sonarqube {
     properties {
-        property "sonar.projectName", "SMI :: Wiseman"
-        property "sonar.projectKey", "org.sonarqube:wiseman"
+        property "sonar.projectName", "rackhd :: Wiseman"
+        property "sonar.projectKey", "${group}:wiseman"
     }
 }
 
@@ -59,19 +60,13 @@ jar {
 repositories {
 	mavenLocal()
 	maven {
-		url "${artifactory_contextUrl}/libs-release"
+		url "${artifactory_contextUrl}/${dependency_repo}"
 	}
 }
 
 dependencies {
-    //compile "javax.servlet:servlet-api:2.5"
-	//compile "com.sun.xml.fastinfoset:FastInfoset:1.2.3"
-	//compile "javax.annotation:jsr250-api:1.0"
 	compile "com.sun.xml.ws:jaxws-rt:2.1.7"
-	//compile "ant:ant-launcher:1.6.5"
-    //compile group: 'com.sun.org.apache', name: 'jaxp-ri', version: '1.4'
-    compile group: 'xerces', name: 'xercesImpl', version: '2.11.0'
-
+        compile group: 'xerces', name: 'xercesImpl', version: '2.11.0'
 }
 
 test {
@@ -83,13 +78,73 @@ uploadArchives {
        flatDir {
            dirs 'repos'
        }
+	   
+	   mavenDeployer
+	   {
+			beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+			
+			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+				authentication(userName: ossrhUsername, password: ossrhPassword)
+			}
+
+			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+				authentication(userName: ossrhUsername, password: ossrhPassword)
+			}
+	  
+	        pom.project {
+				artifactId = "wiseman"
+				packaging 'jar'
+				url 'https://www.github.com/rackhd/smi-lib-wiseman'
+				name 'Wiseman Jar'
+				description 'A Jar library for Wiseman, an open-source implementation of the WS-Management protocol.'
+				inceptionYear '2009'
+				
+				licenses {
+					license {
+						name 'The Apache Software License, Version 2.0'
+						url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+						distribution 'repo'
+					}
+				}
+				
+				scm {
+				  connection 'scm:git:git://www.github.com/rackhd/smi-lib-wiseman.git'
+				  developerConnection 'scm:git:ssh://www.github.com/rackhd/smi-lib-wiseman.git'
+				  url 'http://www.github.com/rackhd/smi-lib-wiseman'
+				}
+				
+				developers {
+					developer {
+						id 'michaelsteven'
+						name 'Michael Hepfer'
+						email 'michael.hepfer@dell.com'
+						organization 'Dell EMC Inc.'
+						organizationUrl 'http://codedellemc.com'
+						}
+				}
+				
+			}
+		}
     }
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    required { gradle.taskGraph.hasTask("artifactoryPublish") }
+    sign configurations.archives
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication){
             artifact jar
+            artifact sourcesJar {
+                classifier "sources"
+            }
+            artifact javadocJar
         }
     }
 }
@@ -108,7 +163,6 @@ artifactory {
     publish {
         defaults{ publications ("mavenJava")}
         repository {
-            repoKey = 'libs-release-local'
 	    // note: username and password being set by bamboo artifactory plugin
             maven = true
         }
