--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,22 @@ jar {
         attributes 'Implementation-Title': 'wiseman',
                    'Implementation-Version': version
     }
-	baseName = 'wiseman'
+}
+
+javadoc {
+    options {
+         encoding = 'windows-1251'
+    }
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
 }
 
 repositories {
